[tool.poetry]
name = "scrawl"
version = "0.1.0"
description = ""
authors = ["mbankston <matt.bankston@oppsource.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.982"
black = "^22.10.0"
flake8 = "^5.0.4"
pylint = "^2.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
